--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
    "outputs": [],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "email ends with .com?"
+    "email ends with .com"
    ]
   },
   {
