--- a/index.ipynb
+++ b/index.ipynb
@@ -209,8 +209,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "email = \"art.vandelay@vandelay.co\" # False\n",
-    "email ends with .com"
+    "emai\"art.vandelay@vandelay.co\" # False\n",
+    "email ends with .co"
    ]
   },
   {
