Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,8 +209,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emai\"art.vandelay@vandelay.co\" # False\n",
-    "email ends with .co"
+    "\"art.vandelay@vandelay.co\" # False\n",
+    "\"a\""
    ]
   },
   {
