--- a/index.ipynb
+++ b/index.ipynb
@@ -209,8 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n",
-    "\"art.vandelay\""
+    "\"art.vandelay@vandelay.co\".end # False\n"
    ]
   },
   {
