--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\".end # False\n"
+    "\"art.vandelay@vandelay.co\".endswith(\".com\") # False\n"
    ]
   },
   {
